fix padding for top-bar so the content is centerd on mobile devices

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1036,7 +1036,7 @@ input[type=checkbox] {
   padding-right: 5px;
 }
 .top-bar { /* This element is also styled in theme.js*/
-  padding: 10px 0;
+  padding: 10px 22px;
   height: 50px;
   font-size: 16px;
 	background-color: #232323;
